--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ dependencies:
   firebase_auth: ^5.1.1
   firebase_core: ^3.1.1
   data_table_2: 
-  flutter_typeahead: ^4.8.0 
-  provider: ^6.1.2
+  flutter_typeahead: 
+  provider: 
   dropdown_button2: 
   firebase_storage: 
   cloud_firestore: 
-  file_picker: ^7.0.2
+  file_picker: 
   image_picker: ^1.0.7
   intl: ^0.19.0
 
@@ -56,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
