--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   file_picker: 
   image_picker: ^1.0.7
   intl: ^0.19.0
+  carousel_slider: ^4.2.1
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
