--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.19.0
   carousel_slider: ^4.2.1
   photo_view: ^0.15.0
+  image_network: ^2.5.6
 
 dev_dependencies:
   flutter_test:
