--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   photo_view: ^0.15.0
   image_network: ^2.5.6
   fluttertoast: ^8.2.6
+  shared_preferences: ^2.3.1
+  syncfusion_flutter_datepicker: 
 
 dev_dependencies:
   flutter_test:
